<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/draw_button"
        android:text="@string/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/list_button"
        android:text="@string/list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/send_button"
        android:text="@string/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>