<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/a"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_red_dark"
        android:text="@string/A"/>

    <TextView
        android:id="@+id/b"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/a"
        android:layout_alignBottom="@id/a"
        android:gravity="center"
        android:background="@android:color/holo_green_dark"
        android:text="@string/B"/>

    <TextView
        android:id="@+id/c"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_above="@+id/b"
        android:gravity="center"
        android:layout_alignRight="@+id/b"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/C"/>

    <TextView
        android:id="@+id/d"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_dark"
        android:layout_below="@+id/a"
        android:text="@string/D"/>

    <TextView
        android:id="@+id/e"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@android:color/holo_green_dark"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_toLeftOf="@+id/a"
        android:text="@string/E"/>
</RelativeLayout>