<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Header -->

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:text="@string/title"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/title"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>

    <!-- Content -->

    <ScrollView
        android:id="@+id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/load"
        android:layout_below="@+id/header"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:id="@+id/content"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint=""/>
            <TextView
                android:id="@+id/userError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_error"
                android:visibility="gone" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp" />
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />
            <TextView
                android:id="@+id/pwdError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pwd_error"
                android:visibility="gone" />
        </LinearLayout>

    </ScrollView>

    <!-- Progress bar -->

    <ProgressBar
        android:id="@+id/load"
        android:layout_above="@+id/footer"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        />

    <!-- Footer -->

    <LinearLayout
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/send" />
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:text="@string/register"/>

    </LinearLayout>

</RelativeLayout>